--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.17",
         "@fullcalendar/daygrid": "^6.1.17",
-        "@fullcalendar/timegrid": "^6.1.17"
+        "@fullcalendar/timegrid": "^6.1.17",
+        "chart.js": "^4.5.0"
     }
 }
